--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 
 
 ## ignore directories
-.idea/
 .vscode/
-/JAVA/.idea/
 /JAVA/out/
 /JAVA/Lecture/out/
 /JAVA/백준_단계별/out/
+/JAVA/algorithm/out/
+/JAVA/DataStructure/out/
